--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <h3 class="font-bold text-xl">Employees Monitoring Solution</h3>
         <p>Laravel + Vue.js SaaS</p>
       </a>
-      <a href="https://protopak.webfitters.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
-        <h3 class="font-bold text-xl">Protopak Packaging</h3>
-        <p>Laravel + Vue.js</p>
-      </a>
       <a href="https://muslimandquran.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Muslim & Quran</h3>
         <p>Laravel Web App</p>
+      </a>
+       <a href="https://protopak.webfitters.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
+        <h3 class="font-bold text-xl">Protopak Packaging</h3>
+        <p>Laravel + Vue.js</p>
       </a>
       <a href="https://eeprograms.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Company Portfolio</h3>
@@ -83,7 +83,7 @@
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-gray-400 py-6 text-center">
-    © 2025 Sheryar Awan | Built with ❤️
+    © 2025 Sheryar Awan | Built with GITHUB
   </footer>
 </body>
 </html>
