background turn to dark

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Sheryar Awan - PHP Developer</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-gray-900 text-gray-100">
   <!-- Header -->
-  <header class="bg-gray-900 text-white p-6 shadow-md">
+  <header class="bg-gray-950 text-white p-6 shadow-md">
     <div class="max-w-5xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">Sheryar Awan</h1>
       <nav>
@@ -21,29 +21,35 @@
   </header>
 
   <!-- About -->
-  <section id="about" class="max-w-5xl mx-auto py-12 px-6">
-    <h2 class="text-3xl font-bold mb-4">About Me</h2>
-    <p>
-      I am a Full Stack PHP Developer with 5+ years of experience in building scalable
-      <strong>Web Applications, SaaS platforms, and eCommerce solutions</strong>.
-      Skilled in <strong>Laravel, Vue.js, WordPress</strong> with expertise in
-      <strong>Docker, AWS, Forge, WSL</strong>.
-    </p>
+  <section id="about" class="max-w-5xl mx-auto py-12 px-6 flex flex-col md:flex-row items-center gap-8">
+    <!-- Profile Picture -->
+    <img src="pic.jpg" alt="Sheryar Awan" class="w-40 h-40 rounded-full border-4 border-blue-400 shadow-lg">
+    
+    <!-- About Text -->
+    <div>
+      <h2 class="text-3xl font-bold mb-4">About Me</h2>
+      <p>
+        I am a Full Stack PHP Developer with 5+ years of experience in building scalable
+        <strong>Web Applications, SaaS platforms, and eCommerce solutions</strong>.
+        Skilled in <strong>Laravel, Vue.js, WordPress</strong> with expertise in
+        <strong>Docker, AWS, Forge, WSL</strong>.
+      </p>
+    </div>
   </section>
 
   <!-- Skills -->
-  <section id="skills" class="bg-gray-100 py-12 px-6">
+  <section id="skills" class="bg-gray-800 py-12 px-6">
     <div class="max-w-5xl mx-auto">
       <h2 class="text-3xl font-bold mb-4">Skills</h2>
       <ul class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
-        <li class="p-4 bg-white rounded shadow">PHP / Laravel</li>
-        <li class="p-4 bg-white rounded shadow">Vue.js / JavaScript</li>
-        <li class="p-4 bg-white rounded shadow">WordPress</li>
-        <li class="p-4 bg-white rounded shadow">AWS / Docker</li>
-        <li class="p-4 bg-white rounded shadow">APIs</li>
-        <li class="p-4 bg-white rounded shadow">MySQL</li>
-        <li class="p-4 bg-white rounded shadow">Forge / WSL</li>
-        <li class="p-4 bg-white rounded shadow">OpenCart</li>
+        <li class="p-4 bg-gray-700 rounded shadow">PHP / Laravel</li>
+        <li class="p-4 bg-gray-700 rounded shadow">Vue.js / JavaScript</li>
+        <li class="p-4 bg-gray-700 rounded shadow">WordPress</li>
+        <li class="p-4 bg-gray-700 rounded shadow">AWS / Docker</li>
+        <li class="p-4 bg-gray-700 rounded shadow">APIs</li>
+        <li class="p-4 bg-gray-700 rounded shadow">MySQL</li>
+        <li class="p-4 bg-gray-700 rounded shadow">Forge / WSL</li>
+        <li class="p-4 bg-gray-700 rounded shadow">OpenCart</li>
       </ul>
     </div>
   </section>
@@ -52,19 +58,19 @@
   <section id="projects" class="max-w-5xl mx-auto py-12 px-6">
     <h2 class="text-3xl font-bold mb-4">Featured Projects</h2>
     <div class="grid md:grid-cols-2 gap-6">
-      <a href="https://eyesmarty.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
+      <a href="https://eyesmarty.com/" target="_blank" class="block p-6 bg-gray-800 shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Employees Monitoring Solution</h3>
         <p>Laravel + Vue.js SaaS</p>
       </a>
-      <a href="https://muslimandquran.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
+      <a href="https://muslimandquran.com/" target="_blank" class="block p-6 bg-gray-800 shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Muslim & Quran</h3>
         <p>Laravel Web App</p>
       </a>
-       <a href="https://protopak.webfitters.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
+      <a href="https://protopak.webfitters.com/" target="_blank" class="block p-6 bg-gray-800 shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Protopak Packaging</h3>
         <p>Laravel + Vue.js</p>
       </a>
-      <a href="https://eeprograms.com/" target="_blank" class="block p-6 bg-white shadow rounded hover:shadow-lg">
+      <a href="https://eeprograms.com/" target="_blank" class="block p-6 bg-gray-800 shadow rounded hover:shadow-lg">
         <h3 class="font-bold text-xl">Company Portfolio</h3>
         <p>WordPress Website</p>
       </a>
@@ -72,7 +78,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="bg-gray-900 text-white py-12 px-6">
+  <section id="contact" class="bg-gray-950 text-white py-12 px-6">
     <div class="max-w-5xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-4">Contact</h2>
       <p>Email: <a href="mailto:sheryar.mehmood1@gmail.com" class="text-blue-400">sheryar.mehmood1@gmail.com</a></p>
@@ -82,7 +88,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-400 py-6 text-center">
+  <footer class="bg-gray-900 text-gray-400 py-6 text-center">
     © 2025 Sheryar Awan | Built with GITHUB
   </footer>
 </body>
