--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 
   <!-- About -->
   <section id="about" class="max-w-5xl mx-auto py-12 px-6 flex flex-col md:flex-row items-center gap-8">
-    <!-- Profile Picture -->
-    <img src="pic.jpg" alt="Sheryar Awan" class="w-40 h-40 rounded-full border-4 border-blue-400 shadow-lg">
     
     <!-- About Text -->
     <div>
@@ -35,6 +33,11 @@
         <strong>Docker, AWS, Forge, WSL</strong>.
       </p>
     </div>
+
+    <!-- Profile Picture -->
+    <img src="dp.png" alt="Sheryar Awan" class="w-64 h-64 rounded-full border-4 border-blue-400 shadow-lg object-cover">
+
+    
   </section>
 
   <!-- Skills -->
